# jax-noprop

./: .gitignore  CHANGELOG.md  CONDITIONAL_RESNET_CHANGES.md  CONTRIBUTING.md  DERIVATIVE_FUNCTIONALITY_ADDITION.md  DT_FM_CORRECTIONS.md  FLOW_FACTORY_GUIDE.md  GET_SIGMA_T_REFACTORING.md  GITHUB_PREPARATION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LEARNABLE_NOISE_SCHEDULE_VERIFICATION.md  LICENSE  NOISE_SCHEDULE_PAPER_ALIGNMENT.md  ODE_INTEGRATION_MODULE.md  PAPER_ALIGNMENT_CORRECTIONS.md  PYTORCH_ALIGNMENT_CORRECTIONS.md  README.md  SNR_FUNCTIONALITY_ADDITION.md  SNR_WEIGHTING_CORRECTION.md  SNR_WEIGHTING_CORRECTIONS.md  SQUARE_ROOT_RELATIONSHIP_CORRECTION.md  TIME_EMBEDDING_IMPLEMENTATION.md  compare_reverse_predictions.py  generate_samples_visualization.py  pyproject.toml  requirements.txt  setup.py  test_generative_mode.py  test_implementation.py  test_noise_schedules_comprehensive.py  test_noise_schedules_shapes.py  test_reverse_generative_mode.py
.cursor/rules/: numpyro-rule.mdc
.github/: copilot-instructions.md
docs/: API_REFERENCE.md
examples/: example_ct.py  example_dt.py  example_fm.py  quick_start.py  train_cifar.py  train_mnist.py  two_moons.py  two_moons_swapped.py  wrapper_example.py
experiments/: README.md  README_experiments.md  README_parameter_testing.md  generate_comprehensive_report.py  generate_report.py  parameter_sweep.py  quick_test.py  results_tracker.py  run_experiments.py  test_single_config.py
jax_noprop/: __init__.py  base.py  models.py  noprop_ct.py  noprop_dt.py  noprop_fm.py
jax_noprop/tests/: __init__.py  test_noprop.py
src/: __init__.py  no_prop_models.py  noprop_ct.py  noprop_fm.py  test_trainer.py  trainer.py
src/archive/: crn.py  ct.py  fm.py  no_prop_models.py  noprop_ct_old.py  trainer.py
src/blocks/: image_blocks.py  point_cloud_blocks.py
src/configs/: base_config.py  base_config_wip.py  base_model.py  base_trainer.py
src/embeddings/: __init__.py  embeddings.py  noise_schedules.py
src/factories_depreciated/: DIMENSION_GUIDE.md  INTERFACE_COMPARISON.md  convex_flow_factory.py  example_usage.py  example_usage_v2.py  flow_factory.py  model_factory.py  model_factory_v2.py  trainer_example.py  trainer_factory.py
src/flow_models/: crn.py  crn_grads.py  ct.py  ct_orig.py  ct_v2.py  df.py  df_v2.py  fm.py  fm_v2.py  train.py  train_gen.py  train_gen_v2.py  train_v2.py  trainer.py  trainer_gen.py  trainer_gen_v2.py  trainer_v2.py
src/flow_models_wip/: crn_grads_wip.py  crn_wip.py  fm_wip.py  train_two_moons.py  train_wip.py  trainer_wip.py  trainer_wip_backup.py
trainers/: README.md  test_trainer.py  trainer.py
(+62 files in other folders)
